--- a/store/src/app/components/header/header.component.html
+++ b/store/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
     <a routerLink="home">Ecommerce</a>
     <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon
-        [matBadge]="1"
+        [matBadge]="itemsQuantity"
+        [matBadgeHidden]="!itemsQuantity"
         matBadgeColor="warn"
         >shopping_cart</mat-icon>
     </button>
@@ -10,29 +11,22 @@
 
         <div class="p-3 divide-y divide-solid">
             <div class="pb-3 flex justify-between">
-                <span class="mr-16">1 Items</span>
+                <span class="mr-16">{{itemsQuantity}} Items</span>
                 <a routerLink="cart">View Cart</a>
             </div>
-           <div class="py-3">
-            <div class="flex justify-between font-light mb-2">
-                KeyBoard x 1
-                <span class="font-bold">{{150 | currency }}</span>
+           <div *ngIf="cart.items.length" class="py-3">
+            <div *ngFor="let item of cart.items"  class="flex justify-between font-light mb-2">
+                {{item.name}} x {{item.quantity}}
+                <span class="font-bold">{{ item.price | currency }}</span>
            </div>
-           <div class="flex justify-between font-light mb-2">
-            KeyBoard x 1
-            <span class="font-bold">{{150 | currency }}</span>
-       </div>
-       <div class="flex justify-between font-light mb-2">
-        KeyBoard x 1
-        <span class="font-bold">{{150 | currency }}</span>
-   </div>
            </div>
            <div class="flex justify-between font-light py-3">
             Total:
-            <span class="font-bold">{{450 | currency }}</span>
+            <span class="font-bold">{{ getTotal(cart.items) | currency }}</span>
             </div>
             <div class="pt-3 flex justify-between">
-                <button class="bg-rose-600 w-9 h-9 text-white rounded-full">
+                <button (click)="OnClearCart()" 
+                class="bg-rose-600 w-9 h-9 text-white rounded-full">
                     <mat-icon>remove_shopping_cart</mat-icon>
                 </button>
                 <button class="bg-green-600 w-9 h-9 text-white rounded-full">
