--- a/store/src/app/components/header/header.component.html
+++ b/store/src/app/components/header/header.component.html
@@ -30,7 +30,7 @@
                     <mat-icon>remove_shopping_cart</mat-icon>
                 </button>
                 <button class="bg-green-600 w-9 h-9 text-white rounded-full">
-                    <mat-icon>remove_shopping_cart</mat-icon>
+                    <mat-icon>shopping_cart</mat-icon>
                 </button>
             </div>
           </div>
