--- a/store/src/app/pages/cart/cart.component.html
+++ b/store/src/app/pages/cart/cart.component.html
@@ -32,11 +32,13 @@
      <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef>Quantity</th>
         <td mat-cell *matCellDef="let element" class="quantity-cell">
-          <button mat-icon-button>
+          <button (click)="OnRemoveQuantity(element)" 
+          mat-icon-button>
             <mat-icon>remove</mat-icon>
           </button>
           <span class="quantity-value">{{element.quantity}}</span> 
-          <button mat-icon-button>
+          <button (click)="OnAddQuantity(element)" 
+           mat-icon-button>
             <mat-icon>add</mat-icon>
           </button>
         </td>
@@ -55,10 +57,11 @@
 
      <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>
-            <button mat-raised-button color="warn" class="float-right">Clear ALL</button>
+            <button mat-raised-button color="warn" class="float-right" (click)="OnClearCart()">Clear ALL</button>
         </th>
         <td mat-cell *matCellDef="let element">
-          <button mat-mini-fab color="warn" class="float-right">
+          <button  (click)=" OnRemoveFromCart(element)"
+           mat-mini-fab color="warn" class="float-right">
             <mat-icon>close</mat-icon>
           </button>
         </td>
