--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -3,14 +3,17 @@
        <app-filters (showCategory)="OnShowCategory($event)"></app-filters>
     </mat-drawer>
     <mat-drawer-content class="p-6">
-      <app-product-header (columsCountChange)="onColumnCountChange($event)"></app-product-header>
+      <app-product-header (columsCountChange)="onColumnCountChange($event)"
+       (itemsCountChange)="onItemsChange($event)"
+       (sortChange)="onSortChange($event)"
+      ></app-product-header>
          <mat-grid-list
          gutterSize="16"
          [cols]="cols"
          [rowHeight]="rowHeight">
-         
-         <mat-grid-tile>
+         <mat-grid-tile *ngFor="let product of products">
           <app-product-box 
+          [product]="product"
           (addToCart)="OnAddToCart($event)"
           class="w-full" [fullWidth]="cols===1"></app-product-box>
          </mat-grid-tile>
