--- a/store/src/app/pages/product-box/product-box.component.html
+++ b/store/src/app/pages/product-box/product-box.component.html
@@ -1,22 +1,20 @@
-<mat-card [ngClass]="{'text-center':!fullWidth}">
+<mat-card *ngIf="product" [ngClass]="{'text-center':!fullWidth}">
     <div [ngClass]="{'flex':fullWidth}">
         <img class="mb-1 mx-auto h-[200px]"
         [ngClass]="{'h-[200px]':!fullWidth, 'h-[360px]':fullWidth}"
-        src="https://img.freepik.com/free-vector/color-sport-sneaker_98292-3191.jpg?w=740&t=st=1678691450~exp=1678692050~hmac=fd89d9f1e73b6570f3e72ed3e097cc20e565e8861f48e40924106739eb2a84c3" />
-
+        [src]="product.image"/>
         <div class="w-full"
         [ngClass]="{'px-8 flex flex-col justify-between':fullWidth}">
             <div>
-                <h5>Shoes</h5>
-                <p class="truncate hover:whitespace-normal">Sneakers</p>
-                <p *ngIf="fullWidth">Description</p>
+                <h5>{{product.category}}</h5>
+                <p class="truncate hover:whitespace-normal">{{product.title}}</p>
+                <p *ngIf="fullWidth">Description:<br>{{product.description}}</p>
             </div>
             <div class="flex justify-between">
-                <span class="text-red-400">{{150 | currency}}</span>
+                <span class="text-red-400">{{product.price| currency}}</span>
                 <button (click)="OnAddToCart()">
                     <mat-icon class="text-gray-500">shopping_cart</mat-icon>
                 </button>
-
             </div>
         </div>
 
